# tango-idl

./: CMakeLists.txt  README.md  Tango_types.idl  pom.xml  tango.idl  tangoidl.pc.cmake
PSEUDO/: Consumer.idl  GroupAttribute.idl  GroupDevice.idl  Tango_types.idl  tango.idl
PSEUDO/pidl_html/: Tango.GroupDevice.html
idl/branches/idl_files/PSEUDO/: CallBack.idl
idl/branches/idl_files/PSEUDO/pidl_html/: Tango.GroupAttribute.html  _top_.html
idl/branches/idl_files/idl_html/: Tango.html
idl/tags/Release_7/: tango.idl
idl/tags/Release_8.5/: tango.idl
idl/tags/Release_9/: idl2cpp
idl/tags/start/: README
idl/tags/start/PSEUDO/pidl_html/: Tango.Device.html  Tango.Device_2.html  Tango.Monitor.html  Tango.html
idl/tags/start/idl_html/: Tango.Device.html  Tango.Device_2.html
idl/trunk/: Device.idl  tango.idl
idl/trunk/PSEUDO/: Device.idl  Monitor.idl  TclAutomate.idl
idl/trunk/PSEUDO/pidl_html/: Tango.CallBack.html  Tango.Consumer.html  Tango.TclAutomate.html
